--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,9 @@ html, body {
 body {
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     flex-flow: column;
+    color: white;
     background-color: black;
     margin: 0px;
     padding: 0px;
@@ -85,6 +87,11 @@ body {
 
 .num-display {
     font-family: monospace;
+    color: black;
 }
 
-    
+footer  {
+    font-size: 0.75em;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
